--- a/views/users.ejs
+++ b/views/users.ejs
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Users</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
+    <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/users-styles.css">
+
+
 </head>
 <body>
     
+        <header>
+            <!-- include navbar -->
+            <% include partials/navbar.ejs %>
+        </header>
+
     <div class="users-container">
         <h1>EMPLOYEES</h1>
-        <div class="details">
+        <div class = "details">
             <table>
                 <tr>
                     <th>Firstname</th>
@@ -38,17 +47,33 @@
         <button id = "toggleForm">Display add new employee form</button>
         <div id = "addNew">
             <h2>Add New Employee</h2>
-            <form action="/profile/addNewUser" method = "POST">
-                <input type="text" value = "" name = "fname" placeholder="Firt name"><br />
-                <input type="text" value = "" name = "lname" placeholder="Last name"><br />
-                <input type="email" value = "" name = "email" placeholder="Email"><br />
-                <input type="text" value = "" name = "city" placeholder="City"><br />
+            <form action="/profile/addNewUser" method = "POST"  class="col s6">
+                <div class="row">
+                    <div class="input-field col offset-s2 s8">
+                        <input id="first_name" name = "fname" vallue = "" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col offset-s2 s8">
+                        <input id="last_name" name = "lname" vallue = "" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                    </div>
+                    <div class="input-field col offset-s2 s8">
+                        <input id="email" name = "email" vallue = "" type="text" class="validate">
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="input-field col offset-s2 s8">
+                        <input id="city" name = "city" vallue = "" type="text" class="validate">
+                        <label for="city">City</label>
+                    </div>
+                </div>
                 <button>Add</button>
             </form>
         </div>
     </div>
 
-    <script src = "/static/main.js" ></script>
+    <script src="/static/jquery.js"></script>
+    <script src="/static/materialize/js/materialize.min.js"></script>
+    <script src = "/static/js/main.js" ></script>
 
 </body>
 </html>
