--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,16 +6,16 @@
             <i class="fa fa-bars"></i>
         </a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="/profile/status">Employees</a></li>
-            <li><a href="/profile/leave">Add Courier</a></li>
-            <li><a href="/profile/status">Update</a></li>
-            <li><a href="/profile">Track</a></li>
+            <li><a href="/profile/">Employees</a></li>
+            <li><a href="/profile/addCourier">Add Courier</a></li>
+            <li><a href="/profile/updateCourier">Update</a></li>
+            <li><a href="/profile/track">Track</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-            <li><a href="/profile/leave">Add Courier</a></li>
-            <li><a href="/profile/status">Update</a></li>
-            <li><a href="/profile">Track</a></li>
+            <li><a href="/profile/addCourier">Add Courier</a></li>
+            <li><a href="/profile/updateCourier">Update</a></li>
+            <li><a href="/profile/track">Track</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
