--- a/views/users.ejs
+++ b/views/users.ejs
@@ -70,7 +70,7 @@
                             <label for="city">City</label>
                         </div>
                     </div>
-                    <button>Add</button>
+                    <button class = "btn waves-effect waves-light indigo">Add</button>
                 </form>
             </div>
         </div>
