add courier page created

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,7 @@
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
+                <li><a href="/profile/">Employees</a></li>
                 <li><a href="/profile/addCourier">Add Courier</a></li>
                 <li><a href="/profile/updateCourier">Update</a></li>
                 <li><a href="/profile/track">Track</a></li>
