--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,6 +28,9 @@
                     </div>
                 </form>
             </div>
+            <% if(msg) { %>
+                <p class = "center red-text"><%= msg %></p>
+            <% } %>
         </div>
     </div>
 
