--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -81,7 +81,7 @@
                    <label>PAYMENT DETAIL</label>
                </div>
             </div>
-            <button class = "btn waves-effect waves-light lighten-1" id = "saveButton">Save</button>
+            <button class = "btn waves-effect waves-light lighten-1" id = "saveButton">Submit</button>
             <a href="#" class = "btn waves-effect waves-light red lighten-1">Back</a>
         </form>
     </div>
