--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,10 +15,20 @@
 
     #about .card, #about .card-stacked {
         padding-left: 20px;
+        border-radius: 50px;
     }
 
     a {
         font-size: 20px;
+    }
+
+    #saveButton:hover {
+        opacity: 0.8;
+    }
+
+    .addres{
+        width:500px;
+        height: 450px;
     }
 
     body{
@@ -39,7 +49,7 @@
             </a>
 
             <ul class="right hide-on-med-and-down">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="/auth/login">Login</a></li>
@@ -47,7 +57,7 @@
             </ul> 
 
             <ul class="sidenav" id="mobile-links">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="/auth/login">Login</a></li>
@@ -111,6 +121,77 @@
             </div>
         </div>
     </div>
+
+    <div class="container" id="cards">
+        <div class="row">
+            <div class="col s12 m12">
+                <div class="card" style = "border-radius: 50px;">
+                      <div class="card horizontal" style = "border-radius: 50px;">
+                                <div class="addres " >
+                                   <div class="row">
+                                        <br>
+                                        <center> <h5>  OFFICE ADDRESS</h5>
+                                        <p>    Vitvara Techologies <br>
+                                        #3-25/7, Vinayaka Udaya nagar<br>
+                                         Kadri Hills, Mangaluru,<br> Karnataka 575004</p>
+                                            </center>
+                                   </div>
+                                 <div class="row">
+                                        <center><h5>  PHONE</h5>
+                                            +91 854 8866 224<br>
+                                            +91 854 8866 226<br>
+                                            +91 854 8866 227
+                                                </center>
+                                     </div> 
+                                 </div>
+                                <div class="addres" width="40">
+                                     <div class="row"><br>
+                                            <center><h5> Canada Office address</h5>
+                                            Vitvara Techologies <br>
+                                             348, Lumsden avenue,<br>
+                                            Toronto, M4C2L3, CANADA<br>
+                                        </center>
+                                    </div>
+                                    <div class="row">
+                                                    <br>
+                                                    <center><h5>Email</h5>
+                                             support@vitvara.com</center>
+                                
+                                    </div>
+                               
+                                </div>
+                                <div class="addres">
+                                    <div class="card-content blue-text">
+
+                                         <form action="/profile/contact" method = "POST"  class="col s12">
+                                            <div class="row">
+                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                     <input id="name" name = "name" type="text" class="validate">
+                                                     <label for="name">Name</label>
+                                                </div>
+                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                    <input id="email" name = "email" type="email" class="validate">
+                                                    <label for="email">EMAIL</label>
+                                                </div>
+                                                 <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                        <input id="mobile" name = "mobile" type="text" class="validate">
+                                                         <label for="mobile">MOBILE NUMBER</label>
+                                                 </div>
+                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                     <input id="msg" name = "msg" type="text" class="validate">
+                                                    <label for="msg">MESSAGE</label>
+                                                 </div>
+                
+                                             </div>
+                                             <center><button class = "btn waves-effect waves-light blue darken-2" id = "saveButton">Send</button>
+                                                 </center>
+                                         </form>
+                                    </div>
+                                 </div>
+                         </div>
+                   
+                      </div>
+            </div></div> </div>
 
     <script src="/static/jquery.js"></script>
     <script src="/static/materialize/js/materialize.min.js"></script>
