--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile</title>
     <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
+    <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/add-styles.css">
 
     <style>
@@ -102,6 +103,7 @@
         
   $(document).ready(function(){
     $('select').formSelect();
+    $('.sidenav').sidenav();
   });
         
 
