--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<div class="navbar-fixed">
+<div >
     <nav class="nav-wrapper white blue darken-3">
         <div class="container">
             <a href="#" class="brand-logo hide-on-small-only">Courier</a>
