--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
             <a href="#" class="brand-logo">L-Courier</a>
 
             <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                <i class="material-icons">menu</i>
+                <i class="fa fa-bars"></i>
             </a>
 
             <ul class="right hide-on-med-and-down">
